Ksipnate reeee. Sleep is for the weak.... Working offer detail page Fixed login button background color to white Added padding at the bottom of the homepage so that the Awaiting Offers section is not stuck to the bottom

--- a/App/src/pages/home/home.scss
+++ b/App/src/pages/home/home.scss
@@ -131,4 +131,5 @@ h6 {
 .navLBtn{
   height: 42px;
   line-height: 42px;
+  background-color: #FFF;
 }
